@@ -1,6 +1,7 @@
 [production]
 locale = en
 use_zip_extraction = 1
+work_tasks_create_stopped_default = 1
 
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
