@@ -25,6 +25,14 @@
             </td>
         </tr>
         <tr>
+            <td>
+                <?=$this->element->create_stopped->getLabel()?>
+            </td>
+            <td>
+                <?=$this->element->create_stopped?>
+            </td>
+        </tr>
+        <tr>
             <td colspan="2"><?=$this->element->submit?></td>
         </tr>
     </table>
